# tdap

./: .gitignore  CMakeLists.txt  README.md
attic/: array.hpp  array_traits.hpp  bounds.hpp  buffer.hpp  circular.hpp  delay.hpp  integration.hpp  rms.hpp
src/tdap/: array.hpp  array_traits.hpp  average.hpp  boundaries.hpp  bounds.hpp  buffer.hpp  circular.hpp  delay.hpp  filter.hpp  macros.hpp
src/tdap/impl/: average-helper.hpp  average-impl.hpp  boundaries-helper.hpp  filter-impl.hpp
test/: TestPower2.cpp  TestPower2.hpp  main.cpp  test.cpp
